2008-03-29  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-converter.c (create_main_dialog): 
	* src/nsc-xml.[ch]:
	* src/Makefile.am:
	Add help functions for gtkbuiler.

	* data/main.glade:
	* data/main.xml: Use better title in dialog.
	
2008-03-29  Brian Pepple  <bpepple@fedoraproject.org> 

	* data/progress.xml:
	* data/progress.glade:
	* data/Makefile.am (builder_DATA): 
	Add progress dialog ui files.

2008-03-28  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-converter.c (create_new_file):
	Add function to create new GFile based on the audio
	profile & save path.

2008-03-19  Brian Pepple  <bpepple@fedoraproject.org>

	* po/POTFILES.in:
	* src/nsc-error.[ch]:
	* src/nsc-gstreamer.[ch]:
	* src/Makefile.am: Add initial gstreamer framework code.
	
2008-03-19  Brian Pepple  <bpepple@fedoraproject.org>

	* AUTHORS:
	* autogen.sh:
	* configure.ac:
	* Makefile.am:
	* NEWS:
	* README:
	* TODO:
	* data/main.glade:
	* data/main.xml:
	* data/Makefile.am:
	* po/ChangeLog:
	* po/LINGUAS:
	* po/POTFILES.in:
	* src/Makefile.am: 
	* src/nsc-converter.[ch]:
	* src/nsc-extension.[ch]:
	* src/nsc-module.c: Initial project files.
